# bot-block

./: .gitignore  Cargo.toml  install.sh
src/: botblock.rs  discord.rs  fetcher.rs  main.rs
systemd/: bot-block.service  bot-block.timer  botblock.service  botblock.timer
