[package]
name = "botblock"
version = "0.1.0"
edition = "2021"

[features]
default = ["mimalloc", "concurrency", "simd-json"]
simd-json = ["dep:simd-json"]
mimalloc = ["dep:mimalloc"]
concurrency = []

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart"] }
# sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite"] }

tokio = { version = "1", features = ["macros", "net", "time", "rt-multi-thread", "signal"] }
futures = "0.3.28"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.10.3", optional = true }

thiserror = "1"
anyhow = "1.0.72"

log = "0.4"
env_logger = "0.10"

rand = "0.8.5"

mimalloc = { version = "*", default-features = false, optional = true }
num_cpus = "1.16.0"
rayon = "1.7.0"
crossbeam = "0.8.2"
bytes = "1.4.0"
toml = "0.7.6"
chrono = "0.4.26"
